# libnls

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  VENDORING.md  libnls.map
data/: .gitignore  lcidmap.txt
data/cldr/: CMakeLists.txt  cldr-48.2.tar.xz
data/ucd/: CMakeLists.txt  ucd.tar.xz
data/uts39/: uts39.tar.xz
icu/: CMakeLists.txt
icu/common/: libnls_excised_stubs.cpp  locid.cpp  normalizer2.cpp  putil.cpp  schriter.cpp  serv.cpp  stringtriebuilder.cpp  uchar_props_data.h  uchriter.cpp  udata.cpp  unifiedcache.h  ustrenum.cpp
icu/common/unicode/: udata.h  umachine.h
icu/i18n/: coleitr.cpp  coll.cpp  collationiterator.cpp  collationiterator.h  collationroot.cpp  ucol.cpp  ucol_imp.h  ucol_res.cpp  ucol_sit.cpp  utf16collationiterator.h
icu/i18n/unicode/: tblcoll.h
include/: winnls.h
src/: CodePage.cpp  CodePageTable.cpp  CodePageTable.h  Collator.cpp  Collator.h  CompareString.cpp  DateTimeFormat.cpp  DateTimeFormatter.cpp  DateTimeFormatter.h  EmbeddedNlsData.cpp  EmbeddedNlsData.h  IcuDataItem.cpp  IcuDataItem.h  InitializeNls.cpp  LcMapString.cpp  LittleEndian.h  Locale.cpp  LocaleTable.cpp  LocaleTable.h  NlsData.cpp  NlsData.h  NlsVersion.cpp  StringMapper.cpp  StringMapper.h  Utf.h  WideString.h  Win32Types.h
src/icudata/: initialize_nls.cpp  uprops_load.cpp
tests/: CMakeLists.txt  CodePageTests.cpp  CompareStringTests.cpp  DateTimeFormatTests.cpp  EmbeddedDataTests.cpp  HostLastError.cpp  LcMapStringTests.cpp  LocaleCollationTests.cpp  LocaleTests.cpp  NlsVersionTests.cpp  TestMain.cpp  WideText.h
tests/framework/: Check.h  RegisteredTest.h  TestAbort.h  TestRegistry.cpp  TestRegistry.h
tools/: README.md
tools/NlsDataGenerator/: CanonIterSelfTest.cs  CollDumpSelfTest.cs  CollSetSelfTest.cs  CommandLineOptions.cs  DeBlobSelfTest.cs  DeResSelfTest.cs  DiffBlobsSelfTest.cs  Generator.cs  NlsDataGenerator.csproj  NlsDataGenerator.slnx  NormalizerSelfTest.cs  Program.cs  ResDumpSelfTest.cs  ResWriterSelfTest.cs  RuleParserSelfTest.cs  TrieDecodeSelfTest.cs  TrieSelfTest.cs  UCharsTrieSelfTest.cs  UcpTrieSelfTest.cs  Unicode.cs  WeightsSelfTest.cs
tools/NlsDataGenerator/.run/: AOT.run.xml
tools/NlsDataGenerator/Case/: CaseGenerator.Closure.cs  CaseGenerator.Container.cs  CaseGenerator.Exceptions.cs  CaseGenerator.cs  ExceptionProps.cs
tools/NlsDataGenerator/Codepage/: Windows1252Generator.cs
tools/NlsDataGenerator/Collation/: CeBuffer.cs  CeFinalizer.cs  CldrCollationImporter.cs  CldrCollationReader.cs  CollationBaseDataBuilder.cs  CollationBuilder.Closure.cs  CollationBuilder.Finalize.cs  CollationBuilder.Relation.cs  CollationBuilder.Reset.cs  CollationBuilder.Sink.cs  CollationBuilder.Stubs.cs  CollationBuilder.cs  CollationData.Reorder.cs  CollationData.cs  CollationDataBuilder.Add.cs  CollationDataBuilder.Build.cs  CollationDataBuilder.Context.cs  CollationDataBuilder.CopyFrom.cs  CollationDataBuilder.Encode.cs  CollationDataBuilder.GetCEs.cs  CollationDataBuilder.Suppress.cs  CollationDataBuilder.cs  CollationDataWriter.cs  CollationFastLatinBuilder.cs  CollationFastLatinFormat.cs  CollationImportTag.cs  CollationIndex.cs  CollationIterator.cs  CollationParseException.cs  CollationResourceBuilder.cs  CollationRootElements.cs  CollationRootGenerator.cs  CollationRuleParser.Settings.cs  CollationRuleParser.cs  CollationRuleSink.cs  CollationSettings.cs  CollationTypeRules.cs  CollationWeights.cs  Collator.cs  ConditionalCE32.cs  (+18 more)
tools/NlsDataGenerator/IcuFormat/: AllSameBlocks.cs  BranchHeadNode.cs  BranchNode.cs  CodePointTrieBuilder.CompactIndex.cs  CodePointTrieBuilder.Compaction.cs  CodePointTrieBuilder.GetRange.cs  CodePointTrieBuilder.Serialize.cs  CodePointTrieBuilder.cs  FinalValueNode.cs  IcuDataHeader.cs  IcuDataPackageWriter.cs  IntermediateValueNode.cs  LinearMatchNode.cs  ListBranchNode.cs  LittleEndianWriter.cs  MixedBlocks.cs  SplitBranchNode.cs  Trie2Builder.Freeze.cs  Trie2Builder.cs  Trie2ValueBits.cs  TrieNode.cs  UCharsTrieBuilder.cs  UCharsTrieElement.cs  UCharsTrieFormat.cs  UCharsTrieIterator.cs  UCharsTrieMatcher.cs  Utrie2Reader.cs  ValueNode.cs
tools/NlsDataGenerator/Locale/: LcidTableGenerator.cs
tools/NlsDataGenerator/Metadata/: NlsMetadataGenerator.cs
tools/NlsDataGenerator/Normalization/: BuildTimeNormalizer.cs  CanonicalClosureData.cs  CanonicalIterator.cs  CodePointData.cs  CodePointDataTable.cs  CompositionBuilder.cs  CompositionPair.cs  Decomposer.cs  ExtraDataBuilder.cs  Hangul.cs  MappingKind.cs  Norm16Constants.cs  NormType.cs  NormalizationDataBuilder.Container.cs  NormalizationDataBuilder.Norm16.cs  NormalizationDataBuilder.PostProcess.cs  NormalizationDataBuilder.ProcessData.cs  NormalizationDataBuilder.cs  NormalizationIndex.cs  ReorderingBuffer.cs  Utf16.cs
tools/NlsDataGenerator/Parsing/: CaseFolding.cs  CaseFoldingReader.cs  CaseInputs.cs  CldrDtdVersionReader.cs  CodePointSet.cs  DecimalDigitReader.cs  IcuUnescape.cs  PatternWhiteSpace.cs  PropertyListReader.cs  SpecialCasing.cs  SpecialCasingReader.cs  UScriptHeaderReader.cs  UnicodeDataReader.cs  UnicodeDataRecord.cs
tools/NlsDataGenerator/ResourceBundle/: BinaryResource.cs  KeyMapEntry.cs  Resource.cs  ResourceBundleReader.cs  ResourceBundleWriter.CompactKeys.cs  ResourceBundleWriter.CompactStrings.cs  ResourceBundleWriter.cs  ResourceType.cs  StringResource.cs  TableResource.cs
tools/NlsDataGenerator/SelfTests/: CanonIterSelfTest.cs  CollDumpSelfTest.cs  CollSetSelfTest.cs  DatPackageSelfTest.cs  DeBlobSelfTest.cs  DeResSelfTest.cs  DiffBlobsSelfTest.cs  NormalizerSelfTest.cs  ResDumpSelfTest.cs  ResWriterSelfTest.cs  RuleParserSelfTest.cs  TrieDecodeSelfTest.cs  TrieSelfTest.cs  UCharsTrieSelfTest.cs  UcpTrieSelfTest.cs  WeightsSelfTest.cs
