# Vendored, pinned ICU4C 78.3 subset (common/ wholesale + i18n/ collation only).
# Treated as upstream: kept close to ICU's form, isolated here, minimally edited.
# Built as an OBJECT library so its objects fold into the single libnls.so, and so the ICU
# TUs can carry ICU's build flags independently of our shims (e.g. the -fshort-wchar split).
#
# UCONFIG_NO_* and U_STATIC_IMPLEMENTATION are PUBLIC: consumers that include ICU headers must
# see the identical configuration or the headers expand inconsistently. U_*_IMPLEMENTATION are
# PRIVATE: they only matter while compiling ICU itself.

# common/: vendored WHOLESALE (trimmed in the post-integration cleanup round — see VENDORING.md).
# Listed explicitly (not globbed): adds/removes reconfigure, and the cleanup round trims here.
set(ICU_COMMON_SOURCES
    common/appendable.cpp
    common/bmpset.cpp
    common/bytesinkutil.cpp
    common/bytestream.cpp
    common/bytestriebuilder.cpp
    common/bytestrie.cpp
    common/bytestrieiterator.cpp
    common/caniter.cpp
    common/chariter.cpp
    common/charstr.cpp
    common/cmemory.cpp
    common/cstr.cpp
    common/cstring.cpp
    common/cwchar.cpp
    common/dtintrv.cpp
    common/edits.cpp
    common/errorcode.cpp
    common/filterednormalizer2.cpp
    common/fixedstring.cpp
    common/icudataver.cpp
    common/libnls_excised_stubs.cpp
    common/loadednormalizer2impl.cpp
    common/localebuilder.cpp
    common/localeprioritylist.cpp
    common/locavailable.cpp
    common/locid.cpp
    common/locmap.cpp
    common/locutil.cpp
    common/normalizer2.cpp
    common/normalizer2impl.cpp
    common/parsepos.cpp
    common/patternprops.cpp
    common/propsvec.cpp
    common/putil.cpp
    common/resbund.cpp
    common/resource.cpp
    common/restrace.cpp
    common/ruleiter.cpp
    common/schriter.cpp
    common/serv.cpp
    common/servlk.cpp
    common/servlkf.cpp
    common/servls.cpp
    common/servnotf.cpp
    common/servrbf.cpp
    common/servslkf.cpp
    common/sharedobject.cpp
    common/static_unicode_sets.cpp
    common/stringpiece.cpp
    common/stringtriebuilder.cpp
    common/uarrsort.cpp
    common/ucase.cpp
    common/ucasemap.cpp
    common/ucat.cpp
    common/ucharstriebuilder.cpp
    common/ucharstrie.cpp
    common/ucharstrieiterator.cpp
    common/uchriter.cpp
    common/ucln_cmn.cpp
    common/ucmndata.cpp
    common/ucol_swp.cpp
    common/ucptrie.cpp
    common/udata.cpp
    common/udatamem.cpp
    common/udataswp.cpp
    common/uenum.cpp
    common/uhash.cpp
    common/uhash_us.cpp
    common/uinvchar.cpp
    common/uiter.cpp
    common/ulist.cpp
    common/ulocale.cpp
    common/uloc.cpp
    common/uloc_keytype.cpp
    common/uloc_tag.cpp
    common/umapfile.cpp
    common/umath.cpp
    common/umutablecptrie.cpp
    common/umutex.cpp
    common/unifiedcache.cpp
    common/unifilt.cpp
    common/unifunct.cpp
    common/uniset.cpp
    common/unisetspan.cpp
    common/unistr_case.cpp
    common/unistr_case_locale.cpp
    common/unistr.cpp
    common/unistr_props.cpp
    common/uobject.cpp
    common/uresbund.cpp
    common/uresdata.cpp
    common/uset.cpp
    common/usetiter.cpp
    common/ustack.cpp
    common/ustrcase.cpp
    common/ustrcase_locale.cpp
    common/ustrenum.cpp
    common/ustrfmt.cpp
    common/ustring.cpp
    common/ustrtrns.cpp
    common/ustr_wcs.cpp
    common/utf_impl.cpp
    common/util.cpp
    common/util_props.cpp
    common/utrace.cpp
    common/utrie2_builder.cpp
    common/utrie2.cpp
    common/utrie.cpp
    common/utrie_swap.cpp
    common/utypes.cpp
    common/uvector.cpp
    common/uvectr32.cpp
    common/uvectr64.cpp
)

# i18n/: the COLLATION SUBSET ONLY (+ ucln_in.cpp, the i18n cleanup registry). See VENDORING.md.
set(ICU_I18N_COLLATION_SOURCES
    i18n/bocsu.cpp
    i18n/coleitr.cpp
    i18n/coll.cpp
    i18n/collation.cpp
    i18n/collationcompare.cpp
    i18n/collationdata.cpp
    i18n/collationdatareader.cpp
    i18n/collationfastlatin.cpp
    i18n/collationfcd.cpp
    i18n/collationiterator.cpp
    i18n/collationkeys.cpp
    i18n/collationroot.cpp
    i18n/collationrootelements.cpp
    i18n/collationsets.cpp
    i18n/collationsettings.cpp
    i18n/collationtailoring.cpp
    i18n/rulebasedcollator.cpp
    i18n/sortkey.cpp
    i18n/ucln_in.cpp
    i18n/ucol.cpp
    i18n/ucol_res.cpp
    i18n/ucol_sit.cpp
    i18n/ucoleitr.cpp
    i18n/uitercollationiterator.cpp
    i18n/utf16collationiterator.cpp
    i18n/utf8collationiterator.cpp
)


# Header files — listed so they appear in the project and the cleanup round can trim them too.
# common/ headers are all vendored (wholesale); i18n/ is the clang -MD-confirmed closure (33).
set(ICU_COMMON_HEADERS
    common/bmpset.h
    common/brkeng.h
    common/bytesinkutil.h
    common/capi_helper.h
    common/charstr.h
    common/charstrmap.h
    common/cmemory.h
    common/cpputils.h
    common/cstr.h
    common/cstring.h
    common/cwchar.h
    common/dictbe.h
    common/dictionarydata.h
    common/emojiprops.h
    common/fixedstring.h
    common/hash.h
    common/icuplugimp.h
    common/localefallback_data.h
    common/localeprioritylist.h
    common/locdistance.h
    common/loclikelysubtags.h
    common/locmap.h
    common/locutil.h
    common/lsr.h
    common/lstmbe.h
    common/messageimpl.h
    common/mlbe.h
    common/msvcres.h
    common/mutex.h
    common/norm2allmodes.h
    common/norm2_nfc_data.h
    common/normalizer2impl.h
    common/patternprops.h
    common/propsvec.h
    common/putilimp.h
    common/resource.h
    common/restrace.h
    common/ruleiter.h
    common/serv.h
    common/servloc.h
    common/servnotf.h
    common/sharedobject.h
    common/sprpimpl.h
    common/static_unicode_sets.h
    common/uarrsort.h
    common/uassert.h
    common/ubrkimpl.h
    common/ucase.h
    common/ucasemap_imp.h
    common/ucase_props_data.h
    common/uchar_props_data.h
    common/ucln_cmn.h
    common/ucln.h
    common/ucln_imp.h
    common/ucmndata.h
    common/ucol_data.h
    common/ucol_swp.h
    common/ucptrie_impl.h
    common/ucurrimp.h
    common/udatamem.h
    common/udataswp.h
    common/uelement.h
    common/uenumimp.h
    common/uhash.h
    common/uinvchar.h
    common/ulayout_props.h
    common/ulist.h
    common/ulocimp.h
    common/umapfile.h
    common/umutex.h
    common/unifiedcache.h
    common/uniquecharstr.h
    common/unisetspan.h
    common/unistrappender.h
    common/unormimp.h
    common/uposixdefs.h
    common/uresdata.h
    common/uresimp.h
    common/ureslocs.h
    common/uset_imp.h
    common/ustr_cnv.h
    common/ustrenum.h
    common/ustrfmt.h
    common/ustr_imp.h
    common/util.h
    common/utracimp.h
    common/utrie2.h
    common/utrie2_impl.h
    common/utrie.h
    common/utypeinfo.h
    common/uvector.h
    common/uvectr32.h
    common/uvectr64.h
    common/unicode/appendable.h
    common/unicode/brkiter.h
    common/unicode/bytestream.h
    common/unicode/bytestriebuilder.h
    common/unicode/bytestrie.h
    common/unicode/caniter.h
    common/unicode/casemap.h
    common/unicode/char16ptr.h
    common/unicode/chariter.h
    common/unicode/dbbi.h
    common/unicode/docmain.h
    common/unicode/dtintrv.h
    common/unicode/edits.h
    common/unicode/enumset.h
    common/unicode/errorcode.h
    common/unicode/filteredbrk.h
    common/unicode/icudataver.h
    common/unicode/icuplug.h
    common/unicode/idna.h
    common/unicode/localebuilder.h
    common/unicode/localematcher.h
    common/unicode/localpointer.h
    common/unicode/locdspnm.h
    common/unicode/locid.h
    common/unicode/messagepattern.h
    common/unicode/normalizer2.h
    common/unicode/normlzr.h
    common/unicode/parseerr.h
    common/unicode/parsepos.h
    common/unicode/platform.h
    common/unicode/ptypes.h
    common/unicode/putil.h
    common/unicode/rbbi.h
    common/unicode/rep.h
    common/unicode/resbund.h
    common/unicode/schriter.h
    common/unicode/simpleformatter.h
    common/unicode/std_string.h
    common/unicode/strenum.h
    common/unicode/stringoptions.h
    common/unicode/stringpiece.h
    common/unicode/stringtriebuilder.h
    common/unicode/symtable.h
    common/unicode/ubidi.h
    common/unicode/ubiditransform.h
    common/unicode/ubrk.h
    common/unicode/ucasemap.h
    common/unicode/ucat.h
    common/unicode/uchar.h
    common/unicode/ucharstriebuilder.h
    common/unicode/ucharstrie.h
    common/unicode/uchriter.h
    common/unicode/uclean.h
    common/unicode/ucnv_cb.h
    common/unicode/ucnv_err.h
    common/unicode/ucnv.h
    common/unicode/ucnvsel.h
    common/unicode/uconfig.h
    common/unicode/ucpmap.h
    common/unicode/ucptrie.h
    common/unicode/ucurr.h
    common/unicode/udata.h
    common/unicode/udisplaycontext.h
    common/unicode/uenum.h
    common/unicode/uidna.h
    common/unicode/uiter.h
    common/unicode/uldnames.h
    common/unicode/ulocale.h
    common/unicode/ulocbuilder.h
    common/unicode/uloc.h
    common/unicode/umachine.h
    common/unicode/umisc.h
    common/unicode/umutablecptrie.h
    common/unicode/unifilt.h
    common/unicode/unifunct.h
    common/unicode/unimatch.h
    common/unicode/uniset.h
    common/unicode/unistr.h
    common/unicode/unorm2.h
    common/unicode/unorm.h
    common/unicode/uobject.h
    common/unicode/urep.h
    common/unicode/ures.h
    common/unicode/uscript.h
    common/unicode/uset.h
    common/unicode/usetiter.h
    common/unicode/ushape.h
    common/unicode/usprep.h
    common/unicode/ustring.h
    common/unicode/ustringtrie.h
    common/unicode/utext.h
    common/unicode/utf16.h
    common/unicode/utf32.h
    common/unicode/utf8.h
    common/unicode/utf.h
    common/unicode/utfiterator.h
    common/unicode/utf_old.h
    common/unicode/utfstring.h
    common/unicode/utrace.h
    common/unicode/utypes.h
    common/unicode/uvernum.h
    common/unicode/uversion.h
)

set(ICU_I18N_HEADERS
    i18n/bocsu.h
    i18n/collationcompare.h
    i18n/collationdata.h
    i18n/collationdatareader.h
    i18n/collationfastlatin.h
    i18n/collationfcd.h
    i18n/collation.h
    i18n/collationiterator.h
    i18n/collationkeys.h
    i18n/collationrootelements.h
    i18n/collationroot.h
    i18n/collationsets.h
    i18n/collationsettings.h
    i18n/collationtailoring.h
    i18n/collunsafe.h
    i18n/ucln_in.h
    i18n/ucol_imp.h
    i18n/uitercollationiterator.h
    i18n/usrchimp.h
    i18n/utf16collationiterator.h
    i18n/utf8collationiterator.h
    i18n/unicode/coleitr.h
    i18n/unicode/coll.h
    i18n/unicode/sortkey.h
    i18n/unicode/tblcoll.h
    i18n/unicode/ucoleitr.h
    i18n/unicode/ucol.h
)

add_library(icu OBJECT
    ${ICU_COMMON_SOURCES}
    ${ICU_COMMON_HEADERS}
    ${ICU_I18N_COLLATION_SOURCES}
    ${ICU_I18N_HEADERS}
)

target_include_directories(icu PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/common
    ${CMAKE_CURRENT_SOURCE_DIR}/i18n
)

target_compile_definitions(icu
    PRIVATE
        U_COMMON_IMPLEMENTATION
        U_I18N_IMPLEMENTATION
    PUBLIC
        U_STATIC_IMPLEMENTATION
        # We vendor exactly one ICU and never coexist with a system libicu, so the per-version
        # symbol renaming (urename.h -> ucol_open_78 etc.) buys nothing and couples symbol names
        # to the ICU code version. Disable it so the real names (ucol_open, u_strToUpper) are used.
        # PUBLIC: headers and impl must agree, or the renamed/unrenamed names mismatch at link.
        U_DISABLE_RENAMING=1
        # --- the UCONFIG subsetting switches (see the design doc) ---
        UCONFIG_NO_BREAK_ITERATION=1
        UCONFIG_NO_FILTERED_BREAK_ITERATION=1
        UCONFIG_NO_FORMATTING=1
        UCONFIG_NO_TRANSLITERATION=1
        UCONFIG_NO_REGULAR_EXPRESSIONS=1
        UCONFIG_NO_IDNA=1
        UCONFIG_NO_MF=1
        # NOT set: UCONFIG_NO_NORMALIZATION, UCONFIG_NO_CONVERSION, UCONFIG_NO_COLLATION
        # TODO(spike): UCONFIG_NO_SERVICE=1 — only if the collator is driven without the cache.
)

# Drop unreferenced ICU code at the final link (on top of the UCONFIG excisions).
target_compile_options(icu PRIVATE -ffunction-sections -fdata-sections)

# OBJECT lib feeds a SHARED lib -> needs PIC.
set_target_properties(icu PROPERTIES POSITION_INDEPENDENT_CODE ON)
